Add practice 2. Completa las condiciones

--- a/condicionales/index.html
+++ b/condicionales/index.html
@@ -14,6 +14,9 @@
         <input class="user__name" type="text" value="Paquita" />
       </form>
     </div>
+    <div>
+      <h1>2. Completa las condiciones</h1>
+    </div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
