Add practice 3. Conversor de edad de perro a humano

--- a/condicionales/index.html
+++ b/condicionales/index.html
@@ -17,6 +17,13 @@
     <div>
       <h1>2. Completa las condiciones</h1>
     </div>
+    <div>
+      <h1>3. Conversor de edad de perro a humano</h1>
+      <form action="">
+        <span>Edad del perro: </span>
+        <input class="dog__age" type="text" value="12" />
+      </form>
+    </div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
