--- a/condicionales/index.html
+++ b/condicionales/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>2.3.3 Condicionales</title>
   </head>
   <body>
@@ -11,7 +12,7 @@
       <h1>1. Control de acceso</h1>
       <form action="">
         <span>Nombre de usuaria: </span>
-        <input class="user__name" type="text" value="Paquita" />
+        <input class="user__name" type="text" value="Jony" />
       </form>
     </div>
     <div>
@@ -21,7 +22,7 @@
       <h1>3. Conversor de edad de perro a humano</h1>
       <form action="">
         <span>Edad del perro: </span>
-        <input class="dog__age" type="text" value="12" />
+        <input class="dog__age" type="text" value="4" />
       </form>
     </div>
     <script type="text/javascript" src="./main.js"></script>
